# Haptic_exploration

./: MUJOCO_LOG.TXT  q_des_log.csv
install/: local_setup.sh  setup.sh
install/fr3_control_publish/lib/fr3_control_publish/: ee_pose_bridge  fr3_monitor  jacobian_publisher  mujoco_force_publisher  mujoco_sim_node  simple_control_node
install/fr3_control_publish/share/fr3_control_publish/: local_setup.dsv  package.dsv  package.ps1  package.sh  package.xml
install/fr3_control_publish/share/fr3_control_publish/cmake/: fr3_control_publishConfig.cmake
install/mujoco_ros2_control/lib/mujoco_ros2_control/: mujoco_ros2_control
install/mujoco_ros2_control/share/mujoco_ros2_control/: local_setup.sh  package.sh
install/mujoco_ros2_control_demos/lib/mujoco_ros2_control_demos/: example_diff_drive  example_effort  example_gripper  example_position  example_tricycle_drive  example_velocity
install/mujoco_ros2_control_demos/share/mujoco_ros2_control_demos/: local_setup.sh  package.sh
install/mujoco_ros2_control_demos/share/mujoco_ros2_control_demos/config/: fr3_controllers copy.yaml  fr3_controllers.yaml
install/mujoco_ros2_control_demos/share/mujoco_ros2_control_demos/launch/: fr3_admittance_hzx.launch.py  fr3_hzx.launch copy.py  fr3_hzx.launch.py
install/mujoco_ros2_control_demos/share/mujoco_ros2_control_demos/mujoco_models/: fr3 copy.xml  fr3.xml
install/mujoco_ros2_control_demos/share/mujoco_ros2_control_demos/urdf/: fr3_nohand.urdf
log/: latest_build  latest_list
src/fr3_control_publish/: CMakeLists.txt
src/fr3_control_publish/src/: HybridForceTangentialController copy 2.cpp  HybridForceTangentialController copy.cpp  HybridForceTangentialController.cpp  TangentialVelocityController.cpp  ee_pose_bridge.cpp  force_position_controller copy.cpp  force_position_controller.cpp  fr3_publish_node.cpp  mujoco_force_publisher.cpp  mujoco_sim_node.cpp  position_command_plot.py
src/mujoco_ros2_control/mujoco_ros2_control/include/mujoco_ros2_control/: mujoco_system.hpp
src/mujoco_ros2_control/mujoco_ros2_control/src/: mujoco_ros2_control_node copy.cpp  mujoco_ros2_control_node.cpp  mujoco_system.cpp
src/mujoco_ros2_control/mujoco_ros2_control_demos/launch/: fr3_hzx.launch.py
src/mujoco_ros2_control/mujoco_ros2_control_demos/mujoco_models/: fr3.xml
